--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/nanoid": "^3.0.0",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "crypto-js": "^4.2.0",
+    "file-type": "^19.6.0",
     "nanoid": "3.3.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -46,8 +49,10 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/buffer-to-stream": "^1.0.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
